After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763106 - gtkapplication-dbus: use application id instead of prgname for SM
gtkapplication-dbus: use application id instead of prgname for SM
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-03-04 16:15 UTC by Ray Strode [halfline]
Modified: 2016-03-05 01:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtkapplication-dbus: use application id instead of prgname for SM (11.57 KB, patch)
2016-03-04 16:15 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2016-03-04 16:15:48 UTC
gnome-session takes an "app id" for client and inhibitor registration,
This app id is supposed to be a desktop file id (complete with the
.desktop extension), but gtk+ currently uses g_get_prgname ().

This commit changes gtkapplication to use the application id instead,
which is a much more natural fit.  gnome-session is going to be updated
to stop using the .desktop extension, too, so everything is consistent.
Comment 1 Ray Strode [halfline] 2016-03-04 16:15:54 UTC
Created attachment 323103 [details] [review]
gtkapplication-dbus: use application id instead of prgname for SM
Comment 2 Matthias Clasen 2016-03-04 19:47:21 UTC
Review of attachment 323103 [details] [review]:

sure, that makes sense
Comment 3 Matthias Clasen 2016-03-05 01:26:13 UTC
Attachment 323103 [details] pushed as 046a4a6 - gtkapplication-dbus: use application id instead of prgname for SM